src/objects/XLR8_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Account Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_of_Income__c</fullName>
        <inlineHelpText>For Disability policies, in some cases the benefit is based on a percent of income that the individual was earning.</inlineHelpText>
        <label>Percent of Income</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Injury_Protection__c</fullName>
        <label>Personal Injury Protection</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Injury__c</fullName>
        <label>Personal Injury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Replacement_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Property Replacement Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Property__c</fullName>
        <label>Personal Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Policy_Effective_Date__c</fullName>
        <inlineHelpText>This is the date the Carrier is responsible for beginning coverage of the insured.  It also represents the last renewal date for yearly renewable policies.</inlineHelpText>
        <label>Policy Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Expiration_Date__c</fullName>
        <inlineHelpText>This is the date the current policy expires.</inlineHelpText>
        <label>Policy Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Insurance (Policy Owner)</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Issue_Age__c</fullName>
        <formula>IF(ISBLANK(Policy_Issued_Date__c ), &quot;&quot;, TEXT(((YEAR(TODAY()) - YEAR(Policy_Issued_Date__c ))*12)+(MONTH(TODAY()) - MONTH(Policy_Issued_Date__c )))&amp; &quot; Months&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of months since the policy has been issued (based on the Policy Issued Date).</inlineHelpText>
        <label>Policy Issue Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Issued_Date__c</fullName>
        <inlineHelpText>This is the date the Carrier has officially accepted the application for the insurance policy.  It can be different from the Policy Effective Date.</inlineHelpText>
        <label>Policy Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_On_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Sub_Type__c</fullName>
        <label>Policy Sub-Type</label>
        <picklist>
            <controllingField>Policy_Type__c</controllingField>
            <picklistValues>
                <fullName>10-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st to Die</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd to Die</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-year Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Fee for Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPO (Exclusive Provider Organization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMO (Health Maintenance Organization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS (Point of Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO (Preferred Provider Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term to Specified Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COBRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indexed Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short-Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Indexed Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Variable Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Management Record</label>
        <referenceTo>Potential_Revenue__c</referenceTo>
        <relationshipLabel>Individual Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Existing_Conditions_Notes__c</fullName>
        <inlineHelpText>Enter non-covered pre-existing conditions and their excluded period.</inlineHelpText>
        <label>Pre-Existing Conditions Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Frequency__c</fullName>
        <label>Premium Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Single Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Paid_By_Name__c</fullName>
        <label>Premium Paid By Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Beneficiary__c</fullName>
        <label>Primary Beneficiary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a Contact in the system that is the Primary Producer for the policy.  It can be an inside (employee) producer type or an outside producer.</inlineHelpText>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Insurance (Primary Producer)</relationshipLabel>
        <relationshipName>Individual_Insurance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Policy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>XLR8_Insurance__c.Entity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>XLR8_Insurance__c</referenceTo>
        <relationshipLabel>Individual Insurance</relationshipLabel>
        <relationshipName>Individual_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Type__c</fullName>
        <label>Producer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Damage__c</fullName>
        <label>Property Damage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_Insurance__c</fullName>
        <label>Reason for Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus 162</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Accumulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt/Mortgage Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorce Decree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Liquidity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Benefit Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Redemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental Retirement Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivor Income</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Registered_Insured_Individual__c</fullName>
        <label>Registered Insured Individual</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st to Die</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd to Die</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_Policy_Owner__c</fullName>
        <label>Registered Policy Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>CASE(MONTH(Renewal_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the month of the policy renewal date, which is based on the month of the Renewal Date.</inlineHelpText>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Contents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Contents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replacement_Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residual_Benefits__c</fullName>
        <label>Residual Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Riders_Amount__c</fullName>
        <label>Rider&apos;s Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Riders_Description__c</fullName>
        <label>Riders Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Beneficiary__c</fullName>
        <label>Secondary Beneficiary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Policy_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Policy Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Insurance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicing_Firm_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Individual Insurance (Servicing Firm)</relationshipLabel>
        <relationshipName>Individual_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surrender_Value_As_of_Date__c</fullName>
        <label>Surrender Value As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surrender_Value_Last_Year__c</fullName>
        <label>Surrender Value (Last Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surrender_Value__c</fullName>
        <label>Surrender Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Premium_Amount__c</fullName>
        <label>Target Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Policy_End_Date__c</fullName>
        <inlineHelpText>The maturity date of a term policy.</inlineHelpText>
        <label>Term Policy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terminated_Date__c</fullName>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <inlineHelpText>The reason the policy was terminated.</inlineHelpText>
        <label>Termination Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Un_Underinsured_Motorist_Bodily_Injury__c</fullName>
        <label>Uninsured Motorist Bodily Injury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Un_Underinsured_Motorist_Property_Damage__c</fullName>
        <label>Uninsured Motorist Property Damage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waiting_Period_Accident__c</fullName>
        <label>Waiting Period (Accident)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_Period__c</fullName>
        <label>Waiting Period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_of_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver of Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1035_Exchange__c</fullName>
        <inlineHelpText>The tax free transfer of funds from one permanent life insurance policy to another permanent life insurance policy.</inlineHelpText>
        <label>1035 Exchange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Individual Insurance</label>
    <listViews>
        <fullName>All_Insurance</fullName>
        <columns>Entity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Policy_Type__c</columns>
        <columns>Policy_Holder__c</columns>
        <columns>Carrier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Insurance</label>
    </listViews>
    <nameField>
        <label>Policy Number or Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Insurance</pluralLabel>
    <recordTypes>
        <fullName>Disability</fullName>
        <active>true</active>
        <description>Disability insurance records</description>
        <label>Disability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health</fullName>
        <active>true</active>
        <description>Health insurance records</description>
        <label>Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>Life</fullName>
        <active>true</active>
        <description>Life insurance records</description>
        <label>Life</label>
    </recordTypes>
    <recordTypes>
        <fullName>LongTermCare</fullName>
        <active>true</active>
        <description>Long Term Care insurance records</description>
        <label>Long Term Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Casualty</fullName>
        <active>true</active>
        <description>Property (homeowners, condo, etc) and Casualty (Auto, Boat, etc. Insurance Policies</description>
        <label>Property &amp; Casualty</label>
    </recordTypes>
    <recordTypes>
        <fullName>Umbrella</fullName>
        <active>true</active>
        <description>Umbrella insurance records</description>
        <label>Umbrella</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>